@@ -8,8 +8,9 @@ uses
   {$ENDIF}{$ENDIF}
   Interfaces, // this includes the LCL widgetset
   Forms, lazcontrols, Digit_Bridge_Intf, Digit_Bridge_Impl, DigIt_Types, DigIt_Counters, DigIt_Utils,
-  Digit_Taker_Folder, DigIt_Form_Main, DigIt_Form_Templates, DigIt_Form_AnimAcquiring, Digit_Taker_Twain,
-  Digit_Taker_Twain_SelectForm, Digit_Taker_Twain_SettingsForm, Digit_Taker_Twain_Types;
+  Digit_Taker_Folder,
+  Digit_Taker_Twain, Digit_Taker_Twain_SelectForm, Digit_Taker_Twain_SettingsForm, Digit_Taker_Twain_Types,
+  DigIt_Form_Main, DigIt_Form_Templates, DigIt_Form_AnimAcquiring;
 
 {$R *.res}
 
