@@ -15,6 +15,28 @@ unit Digit_Bridge_Intf;
 interface
 
 const
+  DigIt_TakerFlags_Kind     = $0000000F;
+  DigIt_TakerFlags_TakeKind = $000000F0;
+
+  //
+  //DigIt_TakerFlags_Kind constants
+  //
+
+  //Standard Taker
+  DigIt_Taker_Kind_STD      = $00000000;
+
+  //
+  //DigIt_TakerFlags_TakeKind constants
+  //
+
+  //Taker return a Filename in Preview/Take/ReTake as a PChar (IDigIt_Settings.GetMaxPCharSize maximum size)
+  DigIt_Taker_TakeKind_FILENAME = $00000000;
+
+  (* Maybe Tomorrow
+  //Taker return a Pointer to a Bitmap in Preview/Take/ReTake as a Pointer (IDigIt_Settings.GetMaxBufferSize maximum size)
+  DigIt_Taker_TakeKind_BITMAP   = $00000010;
+  *)
+
   //Default Max PChar Size when passing/receiving parameters to the interface
   //use SetMaxPCharSize to increase the value
   DigIt_MaxPCharSize = 512;
@@ -28,7 +50,7 @@ type
 
   TDigIt_PluginInfo = packed record
     BridgeMinVer: Byte;
-    Flags: Word;        { #note -oMaxM : Future use, like kind of Plugin, etc... }
+    Flags: DWord;        { #note -oMaxM : Future use, like kind of Plugin, etc... }
     Name: String[32];
     Ver: String[5];
   end;
@@ -60,7 +82,7 @@ type
 
   IDigIt_Taker = Interface
   ['{D101CADE-C69C-4929-A8DF-699AC76DEE84}']
-    function Flags: Word; stdcall; { #note -oMaxM : Future use, like kind of Taker, etc... }
+    function Flags: DWord; stdcall; { #note -oMaxM : Future use, like kind of Taker, etc... }
     function Init: Boolean; stdcall;
     function Enabled(AEnabled: Boolean): Boolean; stdcall;
     function Release: Boolean; stdcall;
@@ -69,10 +91,10 @@ type
     function UI_Title(const AUI_Title: PChar): Integer; stdcall;
     function UI_ImageIndex: Integer; stdcall;
 
-     //Take a Picture and returns FileName
-    function Preview(const AFileName: PChar): Integer; stdcall;
-    function Take(const AFileName: PChar): Integer; stdcall;
-    function ReTake(const AFileName: PChar): Integer; stdcall;
+     //Take a Picture and returns it on AData according with DigIt_TakerFlags_TakeKind
+    function Preview(MaxDataSize: DWord; const AData: Pointer): DWord; stdcall;
+    function Take(MaxDataSize: DWord; const AData: Pointer): DWord; stdcall;
+    function ReTake(MaxDataSize: DWord; const AData: Pointer): DWord; stdcall;
   end;
 
   IDigIt_Takers = Interface
